--- a/test/control.glade
+++ b/test/control.glade
@@ -10,6 +10,8 @@
       <column type="gchararray"/>
       <!-- column-name PropertyUnit -->
       <column type="gchararray"/>
+      <!-- column-name PropertyUCA -->
+      <column type="guint"/>
     </columns>
   </object>
   <object class="GtkWindow" id="window">
