--- a/test/control.glade
+++ b/test/control.glade
@@ -304,7 +304,7 @@
     </child>
   </object>
   <object class="GtkAdjustment" id="adjustment_scale">
-    <property name="value">65534.999999999774</property>
+    <property name="value">65535</property>
     <property name="lower">1</property>
     <property name="upper">65535</property>
     <property name="step_increment">1</property>
