--- a/test/control.glade
+++ b/test/control.glade
@@ -14,6 +14,8 @@
       <column type="gchararray"/>
       <!-- column-name PropertyValue -->
       <column type="gchararray"/>
+      <!-- column-name writeable -->
+      <column type="gboolean"/>
     </columns>
   </object>
   <object class="GtkWindow" id="window">
