--- a/test/control.glade
+++ b/test/control.glade
@@ -196,35 +196,7 @@
                     <property name="hscrollbar_policy">automatic</property>
                     <property name="vscrollbar_policy">automatic</property>
                     <child>
-                      <object class="GtkTreeView" id="treeview-properties">
-                        <property name="visible">True</property>
-                        <property name="can_focus">True</property>
-                        <property name="model">camera-properties</property>
-                        <property name="headers_clickable">False</property>
-                        <property name="search_column">0</property>
-                        <child>
-                          <object class="GtkTreeViewColumn" id="namecolumn">
-                            <property name="title">Name</property>
-                            <child>
-                              <object class="GtkCellRendererText" id="namecell"/>
-                              <attributes>
-                                <attribute name="text">0</attribute>
-                              </attributes>
-                            </child>
-                          </object>
-                        </child>
-                        <child>
-                          <object class="GtkTreeViewColumn" id="valuecolumn">
-                            <property name="title">Value</property>
-                            <child>
-                              <object class="GtkCellRendererText" id="valuecell"/>
-                              <attributes>
-                                <attribute name="text">1</attribute>
-                              </attributes>
-                            </child>
-                          </object>
-                        </child>
-                      </object>
+                      <placeholder/>
                     </child>
                   </object>
                   <packing>
